# InfEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-zh.md  README.md  _scan_scenes.py  cmake_build.py  copy_dependencies.cmake.in  install_wheel.cmake  pyproject.toml  requirements.txt  test_scene.json
cpp/infengine/: InfEngine.cpp  InfEngine.h  InfEngineCamera.cpp  ScenePicker.cpp
cpp/infengine/core/config/: EngineConfig.h
cpp/infengine/core/log/: InfLog.h
cpp/infengine/function/audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioListener.cpp  AudioSource.cpp  AudioSource.h
cpp/infengine/function/renderer/: EditorGizmos.cpp  EditorGizmos.h  FullscreenRenderer.cpp  FullscreenRenderer.h  GizmosDrawCallBuffer.cpp  GizmosDrawCallBuffer.h  InfRenderStruct.h  InfRenderer.cpp  InfRenderer.h  InfVkCoreModular.cpp  InfVkCoreModular.h  MaterialDescriptor.cpp  MaterialDescriptor.h  MaterialPipelineManager.cpp  MaterialPipelineManager.h  OutlineRenderer.cpp  OutlineRenderer.h  RenderGraphDescription.h  RenderPassOutput.cpp  SceneRenderGraph.cpp  SceneRenderGraph.h  SceneRenderTarget.cpp  SceneRenderTarget.h  ScriptableRenderContext.cpp  ScriptableRenderContext.h  VkCoreDraw.cpp  VkCoreGlobals.cpp  VkCoreMaterial.cpp
cpp/infengine/function/resources/: AssetRef.h  InfFileManager.cpp  InfFileManager.h
cpp/infengine/function/scene/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  Component.cpp  Component.h  EditorCameraController.cpp  GameObject.cpp  GameObject.h  Light.cpp  Light.h  LightingData.cpp  LightingData.h  MeshCollider.cpp  MeshCollider.h  MeshRenderer.cpp  MeshRenderer.h  PrimitiveMeshes.h  PyComponentProxy.cpp  PyComponentProxy.h  Rigidbody.cpp  Rigidbody.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneRenderer.cpp  SceneRenderer.h  SphereCollider.cpp  SphereCollider.h  Transform.cpp  Transform.h  TransformECSStore.cpp  TransformECSStore.h
cpp/infengine/platform/filesystem/: InfExtLoad.h  InfPath.h
cpp/infengine/platform/input/: InputManager.cpp  InputManager.h
cpp/infengine/platform/window/: InfView.cpp  InfView.h
cpp/infengine/tools/pybinding/: BindingAssetDatabase.cpp  BindingAudio.cpp  BindingCommandBuffer.cpp  BindingGUI.cpp  BindingInfEngine.cpp  BindingInput.cpp  BindingPhysics.cpp  BindingRenderGraph.cpp  BindingRenderPipeline.cpp  BindingResources.cpp  BindingScene.cpp  BindingVector2f.cpp  BindingVector3f.cpp  BindingVector4f.cpp
docs/: index.html  roadmap.html  wiki.html
docs/css/: roadmap.css  style.css  wiki.css
docs/js/: i18n.js  main.js  roadmap.js
docs/wiki/: generate_api_docs.py  mkdocs.yml  mkdocs_api_nav.yml
docs/wiki/site/: 404.html
docs/wiki/site/search/: search_index.json
packaging/: database.py  embed_runtime_manager.py  infengine_hub.spec  infengine_hub_installer.spec  installer_gui.py  launcher.py  python_runtime.py  splash_screen.py  stage_bundled_python_runtime.py  style.py
packaging/installer/: install_python_runtime.py
packaging/model/: project_model.py
packaging/view/: control_pane_view.py  installs_view.py  new_project_view.py
packaging/viewmodel/: control_pane_viewmodel.py
python/: run_tests.py
python/InfEngine/: __init__.py  __init__.pyi  coroutine.py  debug.py  debug.pyi  mathf.py  timing.py
python/InfEngine/components/: __init__.py  __init__.pyi  builtin_component.py  component.py  component.pyi  examples.py  inspector.py  ref_wrappers.py  ref_wrappers.pyi  script_loader.py  script_loader.pyi  serializable_object.py  serialized_field.py  serialized_field.pyi
python/InfEngine/components/builtin/: __init__.py  audio_listener.py  audio_source.py  camera.py  collider.py  light.py  mesh_renderer.py  rigidbody.py  sphere_collider.py
python/InfEngine/core/: __init__.py  __init__.pyi  asset_ref.py  asset_types.py  assets.py  assets.pyi  audio_clip.py  material.py  material.pyi  mesh.py  mesh.pyi  resource_manager.py  resource_manager.pyi  texture.py  texture.pyi
python/InfEngine/engine/: __init__.py  __init__.pyi  bootstrap.py  engine.py  engine.pyi  game_builder.py  i18n.py  library_sync.py  nuitka_builder.py  nuitka_builder.pyi  play_mode.py  play_mode.pyi  player_bootstrap.py  player_gui.py  prefab_manager.py  project_context.py  resources_manager.py  scene_manager.py  script_compiler.py  splash_player.py  undo.py
python/InfEngine/engine/ui/: __init__.py  asset_inspector.py  build_settings_panel.py  closable_panel.py  console_panel.py  editor_icons.py  editor_panel.py  frame_scheduler_panel.py  game_view_panel.py  hierarchy_panel.py  inspector_audio.py  inspector_components.py  inspector_material.py  inspector_panel.py  inspector_renderstack.py  inspector_shader.py  inspector_shader_utils.py  inspector_texture.py  inspector_ui_components.py  inspector_utils.py  menu_bar.py  object_execution_layer.py  project_file_ops.py  (+11 more)
python/InfEngine/gizmos/: collector.py  gizmos.py
python/InfEngine/input/: __init__.py
python/InfEngine/lib/: _InfEngine.pyi
python/InfEngine/math/: __init__.py  __init__.pyi  vector.py
python/InfEngine/physics/: __init__.py
python/InfEngine/rendergraph/: graph.py  graph.pyi
python/InfEngine/rendering/: __init__.py  __init__.pyi  default_pipeline.py  render_pipeline.py  render_pipeline.pyi
python/InfEngine/renderstack/: __init__.py  __init__.pyi  bloom_effect.py  builtin_passes.py  default_deferred_pipeline.py  default_forward_pipeline.py  discovery.py  discovery.pyi  fullscreen_effect.py  fullscreen_pass.pyi  geometry_pass.pyi  injection_point.pyi  render_pass.pyi  render_stack.py  render_stack_pipeline.py  resource_bus.pyi  tonemapping_effect.py
python/InfEngine/scene/: __init__.py  __init__.pyi
python/InfEngine/test/: physics_benchmark_1024_cubes.py  physics_regression_suite.py
python/InfEngine/ui/: __init__.py  enums.py  inf_ui_screen_component.py  inf_ui_world_component.py  ui_button.py  ui_canvas.py  ui_canvas_utils.py  ui_canvas_utils.pyi  ui_event_entry.py  ui_image.py  ui_selectable.py  ui_text.py
python/test/: test_integration_components.py
(+222 files in other folders)
